examples/test/testpolicy12902.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12902
  namespace: namespace117
spec:
  podSelector:
    matchLabels:
      key9: value24
      key35: value20
      key45: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value28
      podSelector:
        matchLabels:
          key12: value1
          key25: value13
          key44: value3
